<resources>
    <string name="app_name" translatable="false">Got2Eat</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="empty_username">Campo não pode estar vazio</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="name_hint">Nome</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="register_button">Registar</string>
    <string name="login_google" translatable="false">Google</string>
    <string name="no_internet">Não existe conexão à internet</string>
    <string name="user_input_hint">Escreva qualquer coisa</string>
    <string name="recipe_name">Nome da receita</string>
    <string name="upload_recipe_image">Carreg. foto</string>
    <string name="recipe_duration">Duração (min): </string>
    <string name="recipe_portions">Porções: </string>
    <string name="recipe_ingredients">Ingredientes</string>
    <string name="recipe_ingredient_quantity" translatable="false">Qt.</string>
    <string name="recipe_preparation_title">Modo de preparação</string>
    <string name="recipe_preparation">Preparação</string>
    <string name="recipe_submit">Submeter</string>
    <string name="signed_out">Sessão terminada</string>
    <string name="register_text">Preencha os seguintes campos para se registar</string>
    <string name="login_text_separator">ou</string>
    <string name="google_login_text">Login com</string>
    <string name="user_profile">Perfil</string>
    <string name="recipe">Receita</string>
    <string name="sign_out">Terminar sessão</string>
    <string name="copy_clipboard">Copiado</string>
    <string name="hint_pedido">Insira aqui o seu pedido...</string>
    <string name="refuse_location">Uso de GPS recusado.</string>
    <string name="recipe_not_saved">Receita não guardada</string>
    <string name="recipe_not_unsaved">Receita não eliminada</string>
    <string name="nav_saved_recipes">Receitas guardadas</string>
    <string name="no_saved_recipes">Não há receitas guardadas.</string>
    <string name="no_restaurant_found">Nenhum restaurante encontrado</string>
    <string name="already_login">Utilizador já tem sessão iniciada</string>
    <string name="about_us">Acerca de</string>
    <string name="settings">Definições</string>

    <string name="preferences_logging_category" translatable="false">Logging</string>
    <string name="preferences_online_log">Ativar registros online</string>
    <string name="preferences_help_category">Ajuda</string>
    <string name="preferences_feedback">Enviar feedback</string>
    <string name="preferences_feedback_summary">Reportar erros técnicos e sugerir novas funcionalidades</string>
    <string name="preferences_recipe_category">Receitas</string>
    <string name="preferences_vegan_only" translatable="false">Vegan</string>
    <string name="preferences_vegan_only_summary">Apenas mostrar receitas vegan</string>
</resources>
