<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="7.5pt"
        app:layout_constraintBottom_toTopOf="@+id/register_name_inputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name_inputLayout"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_rectangle_orange"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintAnimationEnabled="false"
        app:layout_constraintVertical_bias="0.445">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:gravity="center"
            android:textSize="7pt"
            />
    </android.support.design.widget.TextInputLayout>


    <ImageView
          android:id="@+id/icon_name"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:src="@drawable/register_name"
          app:layout_constraintBottom_toBottomOf="@+id/register_name_inputLayout"
          app:layout_constraintEnd_toEndOf="@+id/register_name_inputLayout"
          app:layout_constraintStart_toStartOf="@+id/register_name_inputLayout"
          app:layout_constraintTop_toTopOf="@+id/register_name_inputLayout"
          app:layout_constraintVertical_bias="0.5"
          app:layout_constraintHorizontal_bias="0.01"
        />

      <android.support.design.widget.TextInputLayout
          android:id="@+id/register_username_inputLayout"
          android:layout_width="368dp"
          android:layout_height="40dp"
          android:background="@drawable/rounded_rectangle_orange"
          app:errorEnabled="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/register_name_inputLayout"
          app:layout_constraintVertical_bias="0.03">

          <android.support.design.widget.TextInputEditText
              android:id="@+id/register_username_input"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/username_hint"
              android:inputType="text"
              android:textSize="7pt"
              android:gravity="center"/>
      </android.support.design.widget.TextInputLayout>

      <ImageView
           android:id="@+id/icon_username"
           android:layout_width="24dp"
           android:layout_height="24dp"
           android:src="@drawable/register_username"
           app:layout_constraintBottom_toBottomOf="@+id/register_username_inputLayout"
           app:layout_constraintEnd_toEndOf="@+id/register_username_inputLayout"
           app:layout_constraintHorizontal_bias="0.01"
           app:layout_constraintStart_toStartOf="@+id/register_username_inputLayout"
           app:layout_constraintTop_toTopOf="@+id/register_username_inputLayout"
           app:layout_constraintVertical_bias="0.5" />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/register_email_inputLayout"
         android:layout_width="368dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_rectangle_orange"
         app:errorEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_username_inputLayout"
         app:layout_constraintVertical_bias="0.03">

         <android.support.design.widget.TextInputEditText
             android:id="@+id/register_email_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:textSize="7pt"
             android:gravity="center"/>
     </android.support.design.widget.TextInputLayout>

    <ImageView
         android:id="@+id/icon_email"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/register_email"
         app:layout_constraintBottom_toBottomOf="@+id/register_email_inputLayout"
         app:layout_constraintEnd_toEndOf="@+id/register_email_inputLayout"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="@+id/register_email_inputLayout"
         app:layout_constraintTop_toTopOf="@+id/register_email_inputLayout"
         app:layout_constraintVertical_bias="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_inputLayout"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_rectangle_orange"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_inputLayout"
        app:layout_constraintVertical_bias="0.03"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="7pt"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/icon_password"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/register_password"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_inputLayout"
        app:layout_constraintEnd_toEndOf="@+id/register_password_inputLayout"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/register_password_inputLayout"
        app:layout_constraintTop_toTopOf="@+id/register_password_inputLayout"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_rectangle_gray"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_inputLayout"
        app:layout_constraintVertical_bias="0.5" />


</android.support.constraint.ConstraintLayout>